# ml2-few-shot-pathology

./: .gitignore  MANIFEST.sha256  README.md  pyproject.toml
artifacts/submissions/: submission_s03_uni2_scale64_hardw_pseudo_lam002_iter2_soft150_single_refit_20260613.csv
configs/common/: logging.yaml  metrics.yaml  paths.yaml
configs/models/: main_backbones.yaml
configs/scheme_01/: conch_prompt_probe.yaml  cv_heads.yaml  cv_heads_fast.yaml  cv_heads_fused_single.yaml  (+37 more)
report/: machine_learning-2.tex
requirements/: base.in  conch.in  dev.in
scripts/: 00_env_check.sh  01_audit_dataset.sh  02_download_models.sh  02b_align_reference_labels.sh  03_extract_features.sh  03b_probe_conch_prompts.sh  03c_fuse_features.sh  04_run_frozen_cv.sh  04b_select_scheme01.sh  05_build_teacher.sh  06_select_pseudolabels.sh  07_train_pseudo_heads.sh  08_train_peft_cv.sh  08b_select_scheme02.sh  08c_train_peft_adapted_heads.sh  08d_train_fusion_peft_cv.sh  08e_train_peft_single_refit.sh  08f_diagnose_fusion_classical_cv.sh  08g_train_fusion_single_refit.sh  08h_train_fusion_pseudo_cv.sh  09_infer_final.sh  09b_predict_fusion_single_refit.sh  10_validate_submission.sh  11_select_final_blend.sh  12_train_pseudo_lora.sh  12b_train_pseudo_lora_single_refit.sh  19_check_disk_budget.sh  20_run_background.sh  21_pretrain_preflight.sh
tests/: test_cli_smoke.py  test_dataset_audit.py  test_download_commands.py  test_experiment_plumbing.py  test_offline_verify.py  test_oof_audit.py  test_registry.py  test_scheme01_frozen.py  test_scheme02_module_audit.py  test_scheme03_pseudo.py
(+226 files in other folders)
